# swing-error

./: CITATION.cff  INSTALL  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg
demo/: settings.py
demo/demo/: __init__.py  settings.py  urls.py
src/swin-error/: README.md  __init__.py  pyproject.toml  urls.py
src/swin-error/views/: __init__.py  view_errors.py  view_handler_400 copy.py  view_handler_400.py  view_handler_401.py  view_handler_403.py  view_handler_404.py  view_handler_405.py  view_handler_408.py  view_handler_429.py  view_handler_500.py
src/swin-error/views/test/: test.py
src/swing-error/tests/: tests.py
src/swing_error/: __init__.py  apps.py  conf.py  urls.py
src/swing_error/handlers/: __init__.py  handler_400.py  handler_403.py  handler_404.py  handler_500.py
src/swing_error/middleware/: __init__.py  middleware_exception.py  middleware_exception_logger.py
src/swing_error/migrations/: __init__.py
src/swing_error/responses/: __init__.py  response_error_base.py  response_http_400.py  response_http_401.py  response_http_403.py  response_http_404.py  response_http_405.py  response_http_408.py  response_http_410.py  response_http_429.py  response_http_500.py
src/swing_error/templates/swing_error/: 404.html  error.html
src/swing_error/tests/: __init__.py
src/swing_error/views/: __init__.py  view_error_handler_400.py  view_error_handler_401.py  view_error_handler_403.py  view_error_handler_404.py  view_error_handler_405.py  view_error_handler_408.py  view_error_handler_410.py  view_error_handler_429.py  view_error_handler_500.py  view_error_handler_base.py  view_errors.py
