# -*- coding: utf-8 -*-


# =============================================================================
# Project Configuration
# =============================================================================

[project]
name = "Django"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "asgiref>=3.8.1",
    "sqlparse>=0.3.1",
    "tzdata; sys_platform == 'win32'",
]
authors = [
  {name = "Django Software Foundation", email = "foundation@djangoproject.com"},
]
description = "A high-level Python web framework that encourages rapid development and clean, pragmatic design."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry]
name = "my_django_plugin"
version = "0.1.0"
description = "A Django plugin for..."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"


# =============================================================================
# Dependencies
# =============================================================================

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"


# =============================================================================
# Development Dependencies
# =============================================================================

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0" # Code coverage for tests
black = "^24.8.0" # Code formatter
flake8 = "^7.1.0" # Linter for code quality
mypy = "^1.11.1" # Static type checker
sphinx = "^8.0.2" # Documentation generator
isort = "^5.10.1"


# =============================================================================
# Build System
# =============================================================================

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# =============================================================================
# Scripts
# =============================================================================

[tool.poetry.scripts]
my_django_plugin = 'my_django_plugin:main'
